# share-screen

./: .gitignore  Cargo.toml  LICENSE  README.md  stream.html
content/: script.js  stream.html  styles.css
src/: capture_helper.rs  captures.rs  frame_compressor.rs  main.rs  streamed_resolution.rs
