[package]
name = "share-screen"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
async-web = { git = "https://github.com/BIGDummyHead/async-web.git" }
enc-video = { git = "https://github.com/BIGDummyHead/enc-video.git" }
futures = "0.3.31"
tokio-stream = "0.1.17"
async-stream = "0.3.6"
serde = "1.0.228"
windows = { version = "0.62.2", features = ["Wdk_Graphics_Direct3D", "Win32_Devices_Display", "Win32_Foundation", "Win32_Graphics_Direct3D", "Win32_Graphics_Direct3D11", "Win32_Graphics_Dxgi", "Win32_Graphics_Dxgi_Common", "Win32_Graphics_Gdi", "Win32_Media_MediaFoundation", "Win32_System_Com"] }
image = "0.25.9"
rayon = "1.11.0"
